fix: :bug: solve the bug that sidebar content is not visible if user scrolls page more than a screen

--- a/src/pages/feedbacks/ListPage/components/Sidebar/style.scss
+++ b/src/pages/feedbacks/ListPage/components/Sidebar/style.scss
@@ -8,7 +8,7 @@ $content-margin: map.get($content-margin, "mobile");
   height: 100%;
   max-width: 320px;
   width: min(80vw, 320px);
-  position: absolute;
+  position: fixed;
   right: 0;
   top: $header-height;
   background-color: map.get($colors, "white2");
